20091007  Roland Hughes (rth)   Made a patch to make date index work. The way things are, Date and Numeric will only work if they are keys by themselves.  If you need dates or numbers to be part of a segmented key you need to declare them as Character  columns.
git-svn-id: https://xbasej.svn.sourceforge.net/svnroot/xbasej/xBaseJ@50 8c0a9f9e-d141-0410-baa3-ca9e597ebf62